<resources>
    <string name="app_name">Umbrella Health</string>
    <string name="umbrella_corporation">UMBRELLA CORPORATION</string>
    <string name="umbrella">UMBRELLA</string>
    <string name="has_you_covered">has you covered</string>
    <string name="all_rights_reserved_by_phong_kaster">All rights reserved by UMBRELLA CORPORATION</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="vietnam_phone_prefix">+84</string>
    <string name="get_authorization_code">Get authorization code</string>
    <string name="or">Or</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_2">Phone number:</string>
    <string name="my_phone_number">366253623</string>
    <string name="umbrella_health_phone_number">0366.253.623 – 079.410.4124 (7h to 18h)</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="confirm">Confirm</string>
    <string name="verification_code">Verification code</string>
    <string name="do_not_let_phone_number_empty">Do not let phone number empty</string>
    <string name="only_enter_number_except_first_zero">Only enter number except first zero</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="do_not_receive_verification_code_try_again">Do not receive verification code. Try again!</string>
    <string name="empty_phone_number_or_verificationId">Empty phone number or verification ID</string>
    <string name="verification_failed">Verification failed!</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="add_account_info_successfully">Added account information successfully</string>
    <string name="cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="oops_there_is_an_issue">Oops! There is an issue</string>
    <string name="login_successfully">Login successfully</string>
    <string name="login_failed">Login failed</string>
    <string name="login_with_google_successfully">Login with google successfully</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="personality">Personality</string>
    <string name="appointment">Appointment</string>
    <string name="are_you_sure_about_that">Are you sure about that?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_do_you_want_to_search_today">What do you want to search today ?</string>
    <string name="general_examination">General examination</string>
    <string name="heart_examination">Heart examination</string>
    <string name="pregnant_examination">Pregnant examination</string>
    <string name="covid19_examination">COVID-19 examination</string>
    <string name="medical_test_examination">Medical test examination</string>
    <string name="tooth_examination">Tooth examination</string>
    <string name="eye_examination">Eye examination</string>
    <string name="speciality_examination">Speciality examination</string>
    <string name="popular_specialities">Popular specialities</string>
    <string name="read_more">Read more</string>
    <string name="musculoskeletal">Musculoskeletal</string>
    <string name="popular_doctors">Popular doctors</string>
    <string name="default_doctor_name">Doctor Nguyễn Thành Phong</string>
    <string name="default_speciality">General</string>
    <string name="default_price">Price: 1.896.000 VND</string>
    <string name="app_description">Welcome to Umbrella Health - The best health application in Việt Nam</string>
    <string name="app_short_description">Welcome to Umbrella Health</string>
    <string name="it_is_your_turn">It is your turn. Be ready!</string>
    <string name="umbreall_health_is_running_in_background">Umbrella Health is running in background</string>
    <string name="doctor_information">Doctor information</string>
    <string name="doctor_name">Doctor:</string>
    <string name="default_personal_name">Nguyễn Thành Phong</string>
    <string name="speciality_name">Speciality:</string>
    <string name="speciality">Speciality</string>
    <string name="default_phone_number">0366253623</string>
    <string name="working_process">Working process:</string>
    <string name="default_description"><![CDATA[\<p>- Hướng dẫn đặt t&ecirc;n file b&aacute;o c&aacute;o định kỳ:</p>\n\n<p>&nbsp; &nbsp; ** Lớp (m&atilde; chữ)_M&atilde; sinh vi&ecirc;n(3 số cuối)_Họ v&agrave; t&ecirc;n _BCDK1</p>\n\n<p>VD: AT_069_LuongMinhTien_BCĐK1</p>\]]></string>
    <string name="speciality_information">Speciality informatio</string>
    <string name="description">Description:</string>
    <string name="description2">Description</string>
    <string name="doctor">Doctor</string>
    <string name="all">All</string>
    <string name="service">Service</string>
    <string name="image">Image</string>
    <string name="title_activity_servicepage">ServicepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="service_information">Service overview</string>
    <string name="create_booking">Create booking</string>
    <string name="booking">Booking</string>
    <string name="default_service_name">Xét nghiệm định lượng kháng thể SARS-CoV-2</string>
    <string name="free_booking_fee">Free booking fee</string>
    <string name="bookingName">Booking personal name (Mandatory)</string>
    <string name="bookingName2">Booking personal name</string>
    <string name="bookingPhone">Booking personal phone (Mandatory)</string>
    <string name="bookingPhone2">Booking personal phone</string>
    <string name="patientName">Patient name (Mandatory)</string>
    <string name="patientName2">Patient name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="patientBirthday">Birthday</string>
    <string name="patientAddress">Address</string>
    <string name="patientReason">Reason</string>
    <string name="appointmentDate">Appointment date (Mandatory)</string>
    <string name="appointmentDate2">Appointment date</string>
    <string name="appointmentTime">Appointment time (Mandatory)</string>
    <string name="appointmentTime2">Appointment time</string>
    <string name="please_fulfill_mandatory_information">Please fill in the information completely to save time for examination procedures</string>
    <string name="note">Note</string>
    <string name="note_1">1. The information you provide will be used as medical examination records, when filling in your information, please:</string>
    <string name="note_2">\t* Specify the first and last name, capitalize the first letter, for example: <b>Nguyen Thanh Phong</b></string>
    <string name="note_3">\t* Fill it out completely and correctly and please double check the information before pressing Confirm</string>
    <string name="note_4">2. Please follow the epidemic prevention regulations (wearing a mask, disinfecting, declaring the epidemiology) when visiting the clinic.</string>
    <string name="note_5">By confirming your booking, you fully agree to our Terms of Service.</string>
    <string name="code_male">1</string>
    <string name="code_female">0</string>
    <string name="default_appointment_time">09:00</string>
    <string name="you_do_not_fill_mandatory_field_try_again">You have not provided all required information. Please check again !</string>
    <string name="icon">ICON</string>
    <string name="booking_successfully">Successful booking!</string>
    <string name="if_it_is_the_first_time_you_have_exam">If you do not know the medical examination process at Umbrella Heath. Click the button below to view the instructions!</string>
    <string name="how_to_exam_in_umbrella_health">Guide to medical examination in Umbrella Health</string>
    <string name="open_with_google_map">Open with Google Map</string>
    <string name="medical_examination_guide">Guide to medical examination</string>
    <string name="medical_examination_procedures">Check-up procedure</string>
    <string name="attention_patient">Patient\'s note</string>
    <string name="umbrella_health_support_call_center">Umbrella Health Support Call Center</string>
    <string name="note_medical">Below are <b>guidelines and procedures</b> for customers who book through Umbrella Health</string>
    <string name="note_medical_1">1. You go to Le Van Thinh Hospital, <b>130 Le Van Thinh Street, Binh Trung Tay Ward, District 2, Ho Chi Minh City</b>(clinic facility). Note the parking place
         \n * Motorcycle: you can park it at the hospital parking lot
         \n * Car: you can ask your security guard to show you where to park 150m away from the hospital
         \n 2. You go to the registration counter and <b>reported an appointment through Umbrella Health</b> for priority support
    </string>
    <string name="note_attention_1">
        <b>Note about COVID-19</b>
         \n * When visiting, patients need to check their temperature as soon as they enter the door
         \n * In case testing is required, the inpatient and family members will take care of the patient
    </string>
    <string name="note_attention_2">
        <b>Note that patients need to bring identification documents when going to the doctor</b>
         \n * Health insurance card
         \n * Life/non-life insurance card
         \n * Identity card for adults. Birth certificate for children
    </string>
    <string name="default_datetime">2022-11-24 10:02:43</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="successful_action">The operation was done successfully!</string>
    <string name="at">at</string>
    <string name="back">Back</string>
    <string name="my_birthday">01-05-2022</string>
    <string name="my_address">14 Lý Tự Trọng, Bến Nghé, Quận 1, Thành phố Hồ Chí Minh</string>
    <string name="default_reason">Periodic health examination</string>
    <string name="bookingStatus">Schedule status</string>
    <string name="processing">Processing</string>
    <string name="you_do_not_any_appointment">You don\'t have any upcoming appointments!</string>
    <string name="default_room">Khu A, tầng 1, phòng 102</string>
    <string name="default_position">Number of your examination: 1</string>
    <string name="remind_me">Remind me</string>
    <string name="done">Done</string>
    <string name="your_position">Number of your examination:</string>
    <string name="default_time">09:00</string>
    <string name="default_treatment_name">Name: Thực phẩm bổ sung DutchLady</string>
    <string name="default_treatment_type">Type: Uống</string>
    <string name="default_treatment_times">Times: 7</string>
    <string name="default_treatment_purpose">Purpose: bổ sung Vitamin</string>
    <string name="default_treatment_instruction">Instruction: Uống trước khi ăn và trước đi ngủ 2 viên/lần</string>
    <string name="set_time">Set time</string>
    <string name="message">Message</string>
    <string name="schedule">Schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="vibrate">Vibrate</string>
    <string name="default_treatment_repeat_days">Repeat: daily</string>
    <string name="default_treatment_repeat_time">Time: 9:00 AM</string>
</resources>