<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shortcutHome"
        android:title="@string/home"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_state_home"/>

    <item
        android:id="@+id/shortcutAppointment"
        android:title="@string/appointment"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_state_appointment"/>

    <item
        android:id="@+id/shortcutNotification"
        android:title="@string/notification"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_state_notification"/>

    <item
        android:id="@+id/shortcutPersonality"
        android:title="@string/personality"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_state_personality"/>
</menu>